# csc-explore

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
explore/: __init__.py  dbase.py  schema.sql
explore/static/: style.css
explore/templates/: base.html  detection.html  error.html  home.html  search.html  searches.html  source.html
notes/: idea.org
