[build-system]
requires = ["setuptools >= 61",
	    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csc-explorer"
version = "0.0.2"
authors = [
    {name = "Douglas Burke", email = "dburke@cfa.harvard.edu"},
]
description = "Explore the sources in the Chandra Source Catalog (**experimental**)"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "flask",
  "sherpa"
]
